@@ -2,16 +2,18 @@ package es.uclm.delivery.dominio.controladores;
 
 import es.uclm.delivery.persistencia.*;
 import es.uclm.delivery.presentacion.IUBusqueda;
+import java.util.ArrayList;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Random;
+import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.dao.DataAccessException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -25,8 +27,6 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.SessionAttributes;
-import org.springframework.web.bind.support.SessionStatus;
-
 import es.uclm.delivery.dominio.entidades.*;
 
 @SessionAttributes("carrito")
@@ -40,35 +40,36 @@ public class GestorPedidos {
     }
 
     @Autowired
-    private IUBusqueda iuBusqueda;
+    public IUBusqueda IUBusqueda;
     @Autowired
-    private ItemMenuDAO itemMenuDAO;
+    public ItemMenuDAO itemMenuDAO;
     @Autowired
-    private CartaMenuDAO cartaMenuDAO;
+    public CartaMenuDAO cartaMenuDAO;
     @Autowired
-    private PedidoDAO pedidoDAO;
+    public PedidoDAO pedidoDAO;
 
     @Autowired
-    private PagoDAO pagoDAO;
+    public PagoDAO pagoDAO;
     @Autowired
-    private DireccionDAO direccionDAO;
+    public DireccionDAO direccionDAO;
     @Autowired
-    private ServicioEntregaDAO servicioEntregaDAO;
+    public ServicioEntregaDAO servicioEntregaDAO;
     @Autowired
-    private RepartidorDAO repartidorDAO;
+    public RepartidorDAO repartidorDAO;
 
     @Autowired
-    private ClienteDAO clienteDAO;
+    public ClienteDAO clienteDAO;
 
     @GetMapping("/realizar_pedido")
     public String realizarPedido(@RequestParam("restauranteId") Long restauranteId, Model model,
             @ModelAttribute("carrito") Carrito carrito) {
-        Restaurante restaurante = iuBusqueda.obtenerRestaurante(restauranteId);
+        Restaurante restaurante = IUBusqueda.obtenerRestaurante(restauranteId);
         // Calcular el precio total de cada carta de menú
         restaurante.getCartasMenu().forEach(cartaMenu -> {
             double precioTotal = cartaMenu.getItems().stream()
-                    .mapToDouble(ItemMenu::getPrecio)
+                    .mapToDouble(plato -> plato.getPrecio())
                     .sum();
+            precioTotal = Math.round(precioTotal * 100.0) / 100.0; // Aproximar a dos decimales
             cartaMenu.setPrecioTotal(precioTotal); // Añade un campo `precioTotal` en la clase CartaMenu si no existe
         });
         carrito.setRestauranteId(restauranteId); // Almacenar el ID del restaurante en el carrito
@@ -77,31 +78,29 @@ public class GestorPedidos {
     }
 
     @PostMapping("/agregar_al_carrito")
-    public ResponseEntity<Object> agregarAlCarrito(@ModelAttribute("carrito") Carrito carrito,
+    public ResponseEntity<?> agregarAlCarrito(@ModelAttribute("carrito") Carrito carrito,
             @RequestBody Map<String, Long> requestData) {
-        Long menuId = requestData.get("id"); // Obtener el ID del menú completo desde el JSON
+        Long menuId = requestData.get("id");
         Optional<CartaMenu> menuOpt = cartaMenuDAO.findById(menuId);
         if (menuOpt.isPresent()) {
-            // Agregar todos los ítems del menú al carrito
             CartaMenu menu = menuOpt.get();
-            menu.getItems().forEach(carrito::agregarItem); // Agrega cada ítem al carrito
-            carrito.actualizarPrecioTotal(); // Asegúrate de actualizar el precio total del carrito
-            return ResponseEntity.ok(carrito); // Devuelve el carrito actualizado al frontend
+            menu.getItems().forEach(carrito::agregarItem);
+            carrito.actualizarPrecioTotal();
+            return ResponseEntity.ok(carrito);
         }
         return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Menú no encontrado");
     }
 
     @DeleteMapping("/eliminar_del_carrito/{cartaMenuId}")
-    public ResponseEntity<Object> eliminarDelCarrito(@ModelAttribute("carrito") Carrito carrito,
+    public ResponseEntity<?> eliminarDelCarrito(@ModelAttribute("carrito") Carrito carrito,
             @PathVariable Long cartaMenuId) {
         carrito.eliminarItem(cartaMenuId); // Método que elimina el item por ID en el carrito
         return ResponseEntity.ok(carrito); // Devuelve el carrito actualizado al frontend
     }
 
     @DeleteMapping("/limpiar_carrito")
-    public ResponseEntity<Object> limpiarCarrito(@ModelAttribute("carrito") Carrito carrito, SessionStatus sessionStatus) {
+    public ResponseEntity<?> limpiarCarrito(@ModelAttribute("carrito") Carrito carrito) {
         carrito.vaciar(); // Método que elimina todos los ítems del carrito
-        sessionStatus.setComplete(); // Limpia el carrito de la sesion
         return ResponseEntity.ok(carrito); // Devuelve el carrito vacío
     }
 
@@ -111,73 +110,76 @@ public class GestorPedidos {
     }
 
     @PostMapping("/confirmar_pedido")
-public ResponseEntity<Object> confirmarPedido(@ModelAttribute("carrito") Carrito carrito,
-        @RequestBody Map<String, Object> requestData, SessionStatus sessionStatus) {
-    Long direccionId;
-    try {
-        direccionId = Long.parseLong((String) requestData.get("direccionId"));
-    } catch (NumberFormatException e) {
-        logger.error("Error al convertir direccionId a Long", e);
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("ID de dirección inválido");
-    }
+    public ResponseEntity<?> confirmarPedido(@ModelAttribute("carrito") Carrito carrito,
+            @RequestBody Map<String, Object> requestData) {
+        Long direccionId;
 
-    String metodoPago = (String) requestData.get("metodoPago");
-    Map<String, String> pagoInfo = (Map<String, String>) requestData.get("pagoInfo");
-
-    if (direccionId == null || metodoPago == null || pagoInfo == null) {
-        logger.error("Dirección, método de pago y datos de pago son requeridos");
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                .body("Dirección, método de pago y datos de pago son requeridos");
-    }
-
-    try {
-        String username = iuBusqueda.obtenerClienteActual().getUsuario().getUsername();
-        Optional<Cliente> clienteOpt = clienteDAO.findByUsername(username);
-        if (clienteOpt.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Cliente no encontrado");
+        try {
+            direccionId = Long.parseLong(requestData.get("direccionId").toString());
+        } catch (NumberFormatException | NullPointerException e) {
+            logger.error("Error al convertir direccionId a Long", e);
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("ID de dirección inválido");
         }
 
-        Cliente cliente = clienteOpt.get();
-        Optional<Direccion> direccionOpt = direccionDAO.findById(direccionId);
-        if (direccionOpt.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Dirección no encontrada");
+        String metodoPago = (String) requestData.get("metodoPago");
+        Map<String, Object> pagoInfo = (Map<String, Object>) requestData.get("pagoInfo");
+
+        if (direccionId == null || metodoPago == null || pagoInfo == null || pagoInfo.isEmpty()) {
+            logger.error("Dirección, método de pago y datos de pago son requeridos");
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                    .body("Dirección, método de pago y datos de pago son requeridos");
         }
 
-        Direccion direccion = direccionOpt.get();
-        Pedido pedido = new Pedido();
-        pedido.setCliente(cliente);
-        pedido.setRestaurante(iuBusqueda.obtenerRestaurante(carrito.getRestauranteId()));
-        pedido.setEstado(EstadoPedido.PAGADO);
-        pedido.setFecha(new Date());
-        pedidoDAO.insert(pedido);
+        try {
+            String username = IUBusqueda.obtenerClienteActual().getUsuario().getUsername();
+            Optional<Cliente> clienteOpt = clienteDAO.findByUsername(username);
 
-        Pago pago = new Pago();
-        pago.setPedido(pedido);
-        pago.setTipo(MetodoPago.valueOf(metodoPago));
-        pago.setFechaTransaccion(new Date());
-        pagoDAO.insert(pago);
+            if (clienteOpt.isPresent()) {
+                Cliente cliente = clienteOpt.get();
+                Optional<Direccion> direccionOpt = direccionDAO.findById(direccionId);
 
-        ServicioEntrega servicioEntrega = new ServicioEntrega();
-        servicioEntrega.setPedido(pedido);
-        servicioEntrega.setDireccion(direccion);
-        servicioEntrega.setEstado(EstadoPedido.PAGADO);
-        servicioEntregaDAO.insert(servicioEntrega);
+                if (direccionOpt.isPresent()) {
+                    Direccion direccion = direccionOpt.get();
 
-        carrito.vaciar();
-        sessionStatus.setComplete();
-        logger.info("Pedido confirmado con éxito y servicio de entrega creado en estado PAGADO");
-        return ResponseEntity.ok("Pedido confirmado y servicio de entrega en proceso");
-    } catch (IllegalArgumentException e) {
-        logger.error("Método de pago inválido", e);
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Método de pago inválido");
-    } catch (NullPointerException e) {
-        logger.error("Error: Algún valor requerido es nulo", e);
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Error interno del servidor");
-    } catch (DataAccessException e) {
-        logger.error("Error al interactuar con la base de datos", e);
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Error en la base de datos");
+                    // Crear el pedido
+                    Pedido pedido = new Pedido();
+                    pedido.setCliente(cliente);
+                    pedido.setRestaurante(IUBusqueda.obtenerRestaurante(carrito.getRestauranteId()));
+                    pedido.setEstado(EstadoPedido.PAGADO);
+                    pedido.setFecha(new Date());
+                    pedidoDAO.insert(pedido);
+
+                    // Registrar el pago
+                    Pago pago = new Pago();
+                    pago.setPedido(pedido);
+                    pago.setTipo(MetodoPago.valueOf(metodoPago));
+                    pago.setFechaTransaccion(new Date());
+                    pagoDAO.insert(pago);
+
+                    // Crear servicio de entrega
+                    ServicioEntrega servicioEntrega = new ServicioEntrega();
+                    servicioEntrega.setPedido(pedido);
+                    servicioEntrega.setDireccion(direccion);
+                    servicioEntrega.setEstado(EstadoPedido.PAGADO);
+                    servicioEntregaDAO.insert(servicioEntrega);
+
+                    carrito.vaciar();
+
+                    logger.info("Pedido confirmado con éxito y servicio de entrega creado en estado PAGADO");
+                    return ResponseEntity.ok("Pedido confirmado y servicio de entrega en proceso");
+                } else {
+                    logger.error("Dirección no encontrada");
+                    return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Dirección no encontrada");
+                }
+            } else {
+                logger.error("Cliente no encontrado");
+                return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Cliente no encontrado");
+            }
+        } catch (Exception e) {
+            logger.error("Error al confirmar el pedido: ", e);
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Error al confirmar el pedido");
+        }
     }
-}
 
     @GetMapping("/pedidos_pagados")
     public ResponseEntity<List<Map<String, Object>>> obtenerPedidosPagados() {
@@ -198,7 +200,8 @@ public ResponseEntity<Object> confirmarPedido(@ModelAttribute("carrito") Carrito
                 detalles.put("restaurante", nombreRestaurante + " (" + direccionRestaurante + ")");
                 Direccion direccion = servicioEntrega.getDireccion();
                 if (direccion != null) {
-                    detalles.put("direccion", direccion.getCalle() + ", " + direccion.getCiudad() + ", " + direccion.getCodigoPostal());
+                    detalles.put("direccion",
+                            direccion.getCalle() + ", " + direccion.getCiudad() + ", " + direccion.getCodigoPostal());
                 } else {
                     detalles.put("direccion", "Dirección no disponible");
                 }
@@ -206,40 +209,41 @@ public ResponseEntity<Object> confirmarPedido(@ModelAttribute("carrito") Carrito
                 detalles.put("direccion", "Dirección no disponible");
             }
             return detalles;
-        }).toList();
+        }).collect(Collectors.toList());
         return ResponseEntity.ok(pedidosDetalles);
     }
-    
-    @GetMapping("/pedidos_asignados")
-public ResponseEntity<List<Map<String, Object>>> obtenerPedidosAsignados() {
-    String username = SecurityContextHolder.getContext().getAuthentication().getName();
-    Optional<Repartidor> repartidorOpt = repartidorDAO.findByUsername(username);
 
-    if (repartidorOpt.isPresent()) {
-        Repartidor repartidor = repartidorOpt.get();
-        List<ServicioEntrega> serviciosEntrega = servicioEntregaDAO.findByRepartidorId(repartidor.getId());
-        List<Map<String, Object>> pedidosDetalles = serviciosEntrega.stream().map(servicioEntrega -> {
-            Map<String, Object> detalles = new HashMap<>();
-            Pedido pedido = servicioEntrega.getPedido();
-            detalles.put("id", pedido.getId());
-            detalles.put("estado", pedido.getEstado().toString());
-            String nombre = servicioEntrega.getPedido().getCliente().getNombre();
-            String apellidos = servicioEntrega.getPedido().getCliente().getApellidos();
-            detalles.put("cliente", nombre + " " + apellidos);
-            String nombreRestaurante = servicioEntrega.getPedido().getRestaurante().getNombre();
-            String direccionRestaurante = servicioEntrega.getPedido().getRestaurante().getDireccion();
-            detalles.put("restaurante", nombreRestaurante + " (" + direccionRestaurante + ")");
-            Direccion direccion = servicioEntrega.getDireccion();
-            if (direccion != null) {
-                detalles.put("direccion", direccion.getCalle() + ", " + direccion.getCiudad() + ", " + direccion.getCodigoPostal());
-            } else {
-                detalles.put("direccion", "Dirección no disponible");
-            }
-            return detalles;
-        }).toList();
-        return ResponseEntity.ok(pedidosDetalles);
-    } else {
-        return ResponseEntity.status(404).body(null);
+    @GetMapping("/pedidos_asignados")
+    public ResponseEntity<List<Map<String, Object>>> obtenerPedidosAsignados() {
+        String username = SecurityContextHolder.getContext().getAuthentication().getName();
+        Optional<Repartidor> repartidorOpt = repartidorDAO.findByUsername(username);
+
+        if (repartidorOpt.isPresent()) {
+            Repartidor repartidor = repartidorOpt.get();
+            List<ServicioEntrega> serviciosEntrega = servicioEntregaDAO.findByRepartidorId(repartidor.getId());
+            List<Map<String, Object>> pedidosDetalles = serviciosEntrega.stream().map(servicioEntrega -> {
+                Map<String, Object> detalles = new HashMap<>();
+                Pedido pedido = servicioEntrega.getPedido();
+                detalles.put("id", pedido.getId());
+                detalles.put("estado", pedido.getEstado().toString());
+                String nombre = servicioEntrega.getPedido().getCliente().getNombre();
+                String apellidos = servicioEntrega.getPedido().getCliente().getApellidos();
+                detalles.put("cliente", nombre + " " + apellidos);
+                String nombreRestaurante = servicioEntrega.getPedido().getRestaurante().getNombre();
+                String direccionRestaurante = servicioEntrega.getPedido().getRestaurante().getDireccion();
+                detalles.put("restaurante", nombreRestaurante + " (" + direccionRestaurante + ")");
+                Direccion direccion = servicioEntrega.getDireccion();
+                if (direccion != null) {
+                    detalles.put("direccion",
+                            direccion.getCalle() + ", " + direccion.getCiudad() + ", " + direccion.getCodigoPostal());
+                } else {
+                    detalles.put("direccion", "Dirección no disponible");
+                }
+                return detalles;
+            }).collect(Collectors.toList());
+            return ResponseEntity.ok(pedidosDetalles);
+        } else {
+            return ResponseEntity.status(200).body(null);
+        }
     }
-}
 }
